# worlds-worst_rate-limiter

./: .env  Cargo.toml  README  README.md  rate_limiter_config.yaml
config/: rate_limiter_config.yaml
src/: bin.rs  rate_limiter.rs  storage_handler.rs
src/rl/: dump.rdb  mod.rs  rate_limiter.rs  storage_handler.rs
